made a few changes from feature

--- a/file.html
+++ b/file.html
@@ -12,5 +12,8 @@
 
   <h3>Hey from git terminal</h3>
   <p>I will be pushing soon</p>
+
+  <h3>Hello from feature branch</h3>
+  <p>Made this text from feature branch</p>
 </body>
 </html>
